# ITC313_TP1

./: .gitignore  CMakeLists.txt  README.md
src/: book.cpp  book.h  date.cpp  date.h  genre.h  language.h  library.cpp  library.h  loan.cpp  loan.h  main.cpp  reader.cpp  reader.h  writer.cpp  writer.h
src/test/: bookTest.cpp  bookTest.h  dateTest.cpp  dateTest.h  test.cpp  test.h  writerTest.cpp  writerTest.h
